@@ -1,0 +1,37 @@
+<svg>
+  <linearGradient id="g-left">
+    <stop offset=".0" stop-color="white"/>
+    <stop offset=".1" stop-color="black"/>
+    <stop offset=".2" stop-color="#2c2c2c"/>
+  </linearGradient>
+  <linearGradient id="g-right" gradientTransform="rotate(180 .5 .5)">
+    <stop offset=".0" stop-color="white"/>
+    <stop offset=".1" stop-color="black"/>
+    <stop offset=".2" stop-color="#2c2c2c"/>
+  </linearGradient>
+  <linearGradient id="g-up" gradientTransform="rotate(90 .5 .5)">
+    <stop offset=".0" stop-color="white"/>
+    <stop offset=".1" stop-color="black"/>
+    <stop offset=".2" stop-color="#2c2c2c"/>
+  </linearGradient>
+  <linearGradient id="g-down" gradientTransform="rotate(270 .5 .5)">
+    <stop offset=".0" stop-color="white"/>
+    <stop offset=".1" stop-color="black"/>
+    <stop offset=".2" stop-color="#2c2c2c"/>
+  </linearGradient>
+  <svg>
+    <rect x="0" y="0" width="100%" height="100%" rx="0" ry="0" fill="#2c2c2c"/>
+  </svg>
+  <svg>
+    <rect x="0" y="0" width="15" height="100%" rx="0" ry="5" fill="url(#g-left)"/>
+  </svg>
+  <svg x="100%">
+    <rect x="-15" y="0" width="15" height="100%" rx="0" ry="5" fill="url(#g-right)"/>
+  </svg>
+  <svg>
+    <rect x="0" y="0" width="100%" height="15" rx="0" ry="5" fill="url(#g-up)"/>
+  </svg>
+  <svg y="100%">
+    <rect x="0" y="-15" width="100%" height="15" rx="0" ry="5" fill="url(#g-down)"/>
+  </svg>
+</svg>
